syntax = "proto3";

package erda.msp.credential;
option go_package = "github.com/erda-project/erda-proto-go/msp/credential/pb";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "core/services/authentication/credentials/accesskey/accesskey.proto";
import "common/openapi.proto";

service AccessKeyService {
  option (erda.common.openapi_service) = {
    service: "msp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };
  rpc CreateAccessKey (CreateAccessKeyRequest) returns (CreateAccessKeyResponse) {
    option (google.api.http)     = {
      post: "/api/msp/credential/access-keys"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys"
    };
  }

  rpc DeleteAccessKey (DeleteAccessKeyRequest) returns (DeleteAccessKeyResponse) {
    option (google.api.http)     = {
      delete: "/api/msp/credential/access-keys/{id}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/{id}"
    };
  }

  rpc GetAccessKey (GetAccessKeyRequest) returns (GetAccessKeyResponse) {
    option (google.api.http)     = {
      get: "/api/msp/credential/access-keys/{id}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/{id}"
    };
  }

  rpc DownloadAccessKeyFile (DownloadAccessKeyFileRequest) returns (DownloadAccessKeyFileResponse){
    option (google.api.http)     = {
      get: "/api/msp/credential/access-keys/download",
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/download"
    };
  }

  rpc QueryAccessKeys (QueryAccessKeysRequest) returns (QueryAccessKeysResponse) {
    option (google.api.http)     = {
      post: "/api/msp/credential/access-keys/records"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/records"
    };
  }
}

message CreateAccessKeyRequest {
  erda.core.services.authentication.credentials.accesskey.SubjectTypeEnum.SubjectType subjectType = 1;
  string                                                                              subject     = 2;
  string                                                                              description = 3;
  string                                                                              scope       = 4;
  string                                                                              scopeId     = 5;
}

message CreateAccessKeyResponse {
  erda.core.services.authentication.credentials.accesskey.AccessKeysItem data = 1;
}

message DeleteAccessKeyRequest {
  string id = 1;
}

message DeleteAccessKeyResponse {
}

message GetAccessKeyRequest {
  string id = 1;
}

message GetAccessKeyResponse {
  erda.core.services.authentication.credentials.accesskey.AccessKeysItem data = 1;
}

message DownloadAccessKeyFileRequest {
  string id = 1;
}

message DownloadAccessKeyFileResponse {
  bytes content = 1;
}

message QueryAccessKeysRequest {
  erda.core.services.authentication.credentials.accesskey.StatusEnum.Status           status      = 1;
  erda.core.services.authentication.credentials.accesskey.SubjectTypeEnum.SubjectType subjectType = 2;
  string                                                                              subject     = 3;
  string                                                                              accessKey   = 4;
  int64                                                                               pageNo      = 5;
  int64                                                                               pageSize    = 6;
  string                                                                              scope       = 7;
  string                                                                              scopeId     = 8;
}

message QueryAccessKeysResponse {
  QueryAccessKeysData data = 1;
}

message QueryAccessKeysData {
  repeated erda.core.services.authentication.credentials.accesskey.AccessKeysItem list  = 1;
  int64                                                                           total = 2;
}
